# be

./: Cargo.toml  cloudfront-api-cache.yaml
atoms/: Cargo.toml
atoms/src/: lib.rs
atoms/src/blocks/: model.rs
atoms/src/drawing/: http.rs  mod.rs  model.rs  service.rs
atoms/src/media/: http.rs  mod.rs  model.rs  service.rs
atoms/src/tasks/: http.rs  mod.rs  model.rs  service.rs
atoms/src/users/: mod.rs  model.rs  service.rs
blocks/annotations/: Cargo.toml
blocks/annotations/src/: annotations.rs  blocks.rs  handler.rs  images.rs  labels.rs  lib.rs  tasks.rs  types.rs
lambdas/api-lambda/: Cargo.toml
lambdas/api-lambda/src/: http_handler.rs
scripts/: deploy_lambda.sh
shared/: Cargo.toml
shared/src/: auth.rs  contact.rs  email.rs  image_proxy.rs  lib.rs  projects.rs  s3_multipart.rs  types.rs  users.rs
shared/src/sockets/: handler.rs  messages.rs
