[package]
name = "doxle-atoms"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-dynamodb = "1.9.0"
aws-sdk-s3 = "1.9.0"
lambda_http = { version = "0.11.1", features = ["apigw_http"] }
tokio = { version = "1", features = ["full"] }

# Temporarily refer to shared until cleaner split
# But shared depends on types which we are moving out. 
# We need to be careful. For now, atoms might need shared for clients?
# No, atoms should define logic that TAKES clients as args, not imports them from shared global state.
