[package]
name = "annotations-block"
version = "0.1.0"
edition = "2021"

[dependencies]
doxle-atoms = { path = "../../atoms" }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
