[package]
name = "doxle-api-lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
doxle-shared = { path = "../../shared" }
annotations-block = { path = "../../blocks/annotations" }
doxle-atoms = { path = "../../atoms" }

aws-config = { workspace = true }
aws-sdk-apigatewaymanagement = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sesv2 = { workspace = true }

lambda_http = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64.workspace = true

[package.metadata.lambda.env]
TABLE_NAME = "doxle"
COGNITO_CLIENT_ID = "59u7sgmc3u137f960q2k8j0lc8"
COGNITO_CLIENT_SECRET = "1cp4p05hq1iv10oacjtu1e0k7betc0dgrnsr5torka52al7essra"
COGNITO_USER_POOL_ID="ap-southeast-2_Rmd3TFvE9"
